--- a/bangnangcao-lichthang10.html
+++ b/bangnangcao-lichthang10.html
@@ -3,76 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>Lịch tháng 10</title>
-
+    <style>
+        table {border-collapse: collapse; border: white}
+        tr {text-align: center}
+        th {color: white; background-color: orange; border: 2px solid; border-collapse: collapse; border-color: white}
+        td {border: 2px solid; border-collapse: collapse; border-color: silver}
+        th.bg {background-color: white; color: black}
+        th.cn {background-color: white; color: red}
+        td.cn {background-color: white; color: red}
+        th.tb {background-color: white; color: blue}
+        td.tb {background-color: white; color: blue}
+    </style>
 </head>
 <h2 style="color: blue" align="center">Tháng 10 - October</h2>
-    <table align="center" style="width: 50%;height: 100px">
-        <tr>
-            <th style="width: 14%">C.Nhật</th>
+<table align="center" style="width: 50%;height: 300px">
+    <tr>
+            <th class="cn" style="width: 14%; background-color: red; color: white">C.Nhật</th>
             <th style="width: 14%">T.Hai</th>
             <th style="width: 14%">T.Ba</th>
             <th style="width: 14%">T.Tư</th>
             <th style="width: 14%">T.Năm</th>
             <th style="width: 14%">T.Sáu</th>
-            <th style="width: 14%">T.Bảy</th>
-        </tr>
-        <tr style="text-align: center">
-            <td>Sun</td>
-            <td>Mon</td>
-            <td>Tue</td>
-            <td>Wed</td>
-            <td>Thu</td>
-            <td>Fri</td>
-            <td>Sat</td>
-        </tr>
-    </table>
-<table align="center" style="width: 50%;height: 300px;>
-    <tr>
-        <th style="width="14%""></th>
-        <th style="width: 14%"></th>
-        <th style="width: 14%"></th>
-        <th style="width: 14%"></th>
-        <th style="width: 14%"></th>
-        <th style="width: 14%">1<span style="font-size:8px">13</span></th>
-        <th style="width: 14%">2<span style="font-size:8px">14</span></th>
-        <th style="width: 14%">3<span style="font-size:8px">15</span></th>
+            <th class="tb" style="width: 14%; background-color: blue; color: white">T.Bảy</th>
+    </tr>
+    <tr style="text-align: center">
+            <th class="cn">Sun</th>
+            <th class="bg">Mon</th>
+            <th class="bg">Tue</th>
+            <th class="bg">Wed</th>
+            <th class="bg">Thu</th>
+            <th class="bg">Fri</th>
+            <th class="tb">Sat</th>
     </tr>
     <tr>
-        <th>4<span style="font-size:8px">16</span></th>
-        <th>5<span style="font-size:8px">17</span></th>
-        <th>6<span style="font-size:8px">18</span></th>
-        <th>7<span style="font-size:8px">19</span></th>
-        <th>8<span style="font-size:8px">20</span></th>
-        <th>9<span style="font-size:8px">21</span></th>
-        <th>10<span style="font-size:8px">22</span></th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>1<span style="font-size:8px">13</span></td>
+        <td>2<span style="font-size:8px">14</span></td>
+        <td class="tb">3<span style="font-size:8px; color: black">15</span></td>
     </tr>
-    <tr style="border: 2px solid silver; border-collapse: collapse">
-        <th>11<span style="font-size:8px">23</span></th>
-        <th>12<span style="font-size:8px">24</span></th>
-        <th>13<span style="font-size:8px">25</span></th>
-        <th>14<span style="font-size:8px">26</span></th>
-        <th>15<span style="font-size:8px">27</span></th>
-        <th>16<span style="font-size:8px">28</span></th>
-        <th>17<span style="font-size:8px">29</span></th>
+    <tr>
+        <td class="cn">4<span style="font-size:8px; color: black">16</span></td>
+        <td>5<span style="font-size:8px">17</span></td>
+        <td>6<span style="font-size:8px">18</span></td>
+        <td>7<span style="font-size:8px">19</span></td>
+        <td>8<span style="font-size:8px">20</span></td>
+        <td>9<span style="font-size:8px">21</span></td>
+        <td class="tb">10<span style="font-size:8px; color: black">22</span></td>
     </tr>
-    <tr style="border: 2px solid silver; border-collapse: collapse">
-        <th>18<span style="font-size:8px">1.9</span></th>
-        <th>19<span style="font-size:8px">2</span></th>
-        <th>20<span style="font-size:8px">3</span></th>
-        <th>21<span style="font-size:8px">4</span></th>
-        <th>22<span style="font-size:8px">5</span></th>
-        <th>23<span style="font-size:8px">6</span></th>
-        <th>24<span style="font-size:8px">7</span></th>
-    </tr><tr style="border: 2px solid silver; border-collapse: collapse">
-        <th>25<span style="font-size:8px">8</span></th>
-        <th>26<span style="font-size:8px">9</span></th>
-        <th>27<span style="font-size:8px">10</span></th>
-        <th>28<span style="font-size:8px">11</span></th>
-        <th>29<span style="font-size:8px">12</span></th>
-        <th>30<span style="font-size:8px">13</span></th>
-        <th>31<span style="font-size:8px">14</span></th>
+    <tr>
+        <td class="cn">11<span style="font-size:8px; color: black">23</span></td>
+        <td>12<span style="font-size:8px">24</span></td>
+        <td>13<span style="font-size:8px">25</span></td>
+        <td>14<span style="font-size:8px">26</span></td>
+        <td>15<span style="font-size:8px">27</span></td>
+        <td>16<span style="font-size:8px">28</span></td>
+        <td class="tb">17<span style="font-size:8px; color: black">29</span></td>
+    </tr>
+    <tr>
+        <td class="cn">18<span style="font-size:8px; color: black">1.9</span></td>
+        <td>19<span style="font-size:8px">2</span></td>
+        <td>20<span style="font-size:8px">3</span></td>
+        <td>21<span style="font-size:8px">4</span></td>
+        <td>22<span style="font-size:8px">5</span></td>
+        <td>23<span style="font-size:8px">6</span></td>
+        <td class="tb">24<span style="font-size:8px; color: black">7</span></td>
+    </tr>
+    <tr>
+        <td class="cn">25<span style="font-size:8px; color: black">8</span></td>
+        <td>26<span style="font-size:8px">9</span></td>
+        <td>27<span style="font-size:8px">10</span></td>
+        <td>28<span style="font-size:8px">11</span></td>
+        <td>29<span style="font-size:8px">12</span></td>
+        <td>30<span style="font-size:8px">13</span></td>
+        <td class="tb">31<span style="font-size:8px; color: black">14</span></td>
     </tr>
 </table>
-</div>
 </body>
 </html>
