--- a/Toán tử/diemtrungbinh3mon.html
+++ b/Toán tử/diemtrungbinh3mon.html
@@ -15,12 +15,15 @@
     let ly = parseInt(diemly);
     let hoa = parseInt(diemhoa);
     let sinh = parseInt(diemsinh);
+    let sum = ly+hoa+sinh
     let aveg = (ly+hoa+sinh)/3;
     document.write('Điểm Lý: ' + diemly);
     document.write('</br>');
     document.write('Điểm Hóa: ' + diemhoa);
     document.write('</br>');
     document.write('Điểm Sinh: ' + diemsinh);
+    document.write('</br>');
+    document.write('Điểm tổng 3 môn: ' + sum);
     document.write('</br>');
     document.write('Điểm trung bình 3 môn: ' + aveg)
 </script>
