--- a/Vòng lặp/for2.html
+++ b/Vòng lặp/for2.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let num = prompt('Nhập vào 1 số bất kỳ:');
+    let total = 0;
+    let i;
+    for (i=1;i<=num;i++){
+        total=total+i;
+    }
+    document.write('Tổng các số là: ' + total);
+</script>
 </body>
 </html>
