--- a/Vòng lặp/while.html
+++ b/Vòng lặp/while.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let num = parseInt(prompt('Nhập vào 1 số bất kỳ: '));
+    let total = num;
+    while (num !== -1){
+        num = parseInt(prompt('Nhập vào 1 số bất kỳ: '));
+        total=total+num
+    }
+    document.write('Tổng các số là: ' + total);
+</script>
 </body>
 </html>
