--- a/Vòng lặp/while2.html
+++ b/Vòng lặp/while2.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<div id="demo"></div>
+<script>
+    let i = 1;
+    while (i < 100) {
+        document.write("<hr width = " + i + "%>");
+        i++;
+    }
+</script>
 </body>
 </html>
