--- a/Vòng lặp 1/while.html
+++ b/Vòng lặp 1/while.html
@@ -10,6 +10,7 @@
     let total = num;
     while (num !== -1){
         num = parseInt(prompt('Nhập vào 1 số bất kỳ: '));
+        document.write('Số vừa nhập: ' + num + '<br>')
         total=total+num
     }
     document.write('Tổng các số là: ' + total);
