--- a/test.html
+++ b/test.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Title</title>
 </head>
 <body>
 <script>
+     /*let num = +prompt();
+     let i;
+     let j;
+     for (i=0;i<7;i++) {
+         for (j = 0; j<num; j++) {
+             document.write('* ')
+         }
+         document.write('<br>')
+     }*/
 
 </script>
 </body>
