--- a/Vòng lặp 2/Luyện tập 1/gamedoanso.html
+++ b/Vòng lặp 2/Luyện tập 1/gamedoanso.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="gamedoanso.js"></script>
 </head>
 <body>
-<input type="button" name="button" value="Chơi">
+<input type="button" name="button" value="Chơi" onclick="doanso()">
 </body>
 </html>
