--- a/Vòng lặp 2/Luyện tập 2/bai3.html
+++ b/Vòng lặp 2/Luyện tập 2/bai3.html
@@ -10,10 +10,23 @@
     let j;
     for (i=1;i<=5;i++){
         for (j=1;j<=i;j++){
-            document.write('*');
+            document.write('* ');
         }
         document.write('<br>');
     }
+
+
+
+    let i;
+    let j;
+    for (i=5;i>=1;i--){
+        for (j=1;j<=i;j++){
+            document.write('* ');
+        }
+        document.write('<br>');
+    }
+
+
 </script>
 </body>
 </html>
