--- a/Vòng lặp 2/Luyện tập 2/bai5.html
+++ b/Vòng lặp 2/Luyện tập 2/bai5.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     let tienbandau = +prompt("Số tiền ban đầu là: ");
-    let laisuat = 5/100;
+    let laisuat = +prompt("Lãi suất là: ");
     let sothang = +prompt("Số tháng gửi là: ");
     let laithang;
     let i;
