--- a/test.html
+++ b/test.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="test.js"></script>
 </head>
 <body>
-<script>
-     /*let num = +prompt();
-     let i;
-     let j;
-     for (i=0;i<7;i++) {
-         for (j = 0; j<num; j++) {
-             document.write('* ')
-         }
-         document.write('<br>')
-     }*/
+    <script>
+        let iMax = 20;
+        let jMax = 10;
+        let f = new Array();
 
-</script>
+        for (i = 0; i < iMax; i++) {
+            f[i] = new Array();
+            for (j = 0; j < jMax; j++) {
+                f[i][j] = 0;
+            }
+        }
+    </script>
 </body>
 </html>
