--- a/Vòng lặp 2/Luyện tập 2/bai3.html
+++ b/Vòng lặp 2/Luyện tập 2/bai3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let i;
+    /*let i;
     let j;
     for (i=1;i<=5;i++){
         for (j=1;j<=i;j++){
@@ -15,8 +15,6 @@
         document.write('<br>');
     }
 
-
-
     let i;
     let j;
     for (i=5;i>=1;i--){
@@ -24,8 +22,7 @@
             document.write('* ');
         }
         document.write('<br>');
-    }
-
+    }*/
 
 </script>
 </body>
