--- a/Hàm 2/ktraSNT.html
+++ b/Hàm 2/ktraSNT.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script>
+    let value= +prompt("Nhập vào 1 số bất kỳ: ")
     function isPrime(value) {
         if (value<2)
             return false;
@@ -16,18 +17,11 @@
         }
         return true;
     }
-    function display(num) {
-        let count=0;
-        let value=1;
-        while (count<num){
-            if (isPrime(value)==true){
-                count++
-                document.write(value + " ");
-            }
-            value++
-        }
-    }
-    display(+prompt("Nhập số lượng SNT cần tìm: "))
+    if (isPrime(value)==true){
+        alert(value+" là số nguyên tố")
+    }else
+        alert(value+" không là số nguyên tố")
+
 </script>
 </body>
 </html>
