--- a/Mảng 1/carosimple.html
+++ b/Mảng 1/carosimple.html
@@ -5,20 +5,40 @@
     <title>Title</title>
 </head>
 <body>
+<h3>Caro Game Simple</h3>
+<p id="carogame"></p>
 <script>
+    let b = document.getElementById("carogame");
     let board = [];
     let data = "";
     for (let i = 0; i < 5; i++) {
         board[i] = new Array(0, 0, 0, 0, 0);
     }
+
     for (let i = 0; i < 5; i++) {
         data += "<br/>";
         for (let j = 0; j < 5; j++) {
-            data += board[i][j] + "&nbsp;&nbsp;";
+            data += board[i][j] + "&emsp;";
         }
     }
+
     data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
-    document.getElementById('carogame')=data
+    b.innerHTML = data
+
+    function changeValue() {
+        let positionX = prompt("X: ");
+        let positionY = prompt("Y: ");
+        data = "";
+        board[positionX][positionY] = "x";
+        for (let i = 0; i < 5; i++) {
+            data += "<br/>";
+            for (let j = 0; j < 5; j++) {
+                data += board[i][j] + "&nbsp;&nbsp;&nbsp;&nbsp;";
+            }
+        }
+        data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
+        b.innerHTML = "<hr/>" + data;
+    }
 </script>
 </body>
 </html>
