--- a/Mảng 1/daonguocbang.html
+++ b/Mảng 1/daonguocbang.html
@@ -10,12 +10,10 @@
     document.write('Bảng x là: ' + x + '<br>');
     let first = 0;
     let last = x.length - 1;
-    while (first<last){
-        let b = x[first];
-        x[first]=x[last];
-        x[last]=b;
-        first++;
-        last--;
+    for (first,last;first<=last;first++,last--){
+        temp = x[first]
+        x[first]=x[last]
+        x[last]=temp
     }
     document.write('Bảng đảo ngược là: ' + x);
 </script>
