--- a/Câu lệnh IF 2/Luyện tập 1/bai1.html
+++ b/Câu lệnh IF 2/Luyện tập 1/bai1.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <script>
-    let a = +prompt('Nhập a:');
-    let b = +prompt('Nhập b:');
+    let a = +prompt("Nhập a:");
+    let b = +prompt("Nhập b:");
     let c = a%b === 0;
     if (c) {
-        alert('a chia hết cho b')
+        alert("a chia hết cho b")
     }else{
-            alert('a không chia hết cho b')
+        alert("a không chia hết cho b")
     }
 </script>
 </body>
