--- a/Câu lệnh IF 2/Luyện tập 1/bai2.html
+++ b/Câu lệnh IF 2/Luyện tập 1/bai2.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <script>
-    let a = +prompt("Nhập tuổi:");
-    if (a < 16) {
+    let age = +prompt("Nhập tuổi:");
+    if (age < 16) {
         document.write("Học sinh không đủ điều kiện học vào lớp 10")
     }
 </script>
