--- a/Câu lệnh IF 2/Luyện tập 1/bai3.html
+++ b/Câu lệnh IF 2/Luyện tập 1/bai3.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <script>
-    let a = +prompt("Nhập a:")
-    if (a > 0) {
-        document.write(a + " là số lớn hơn 0")
-    }else if (a < 0) {
-        document.write(a + " là số nhỏ hơn 0")
+    let num = +prompt("Nhập a:")
+    if (num > 0) {
+        document.write(num + " là số lớn hơn 0")
+    }else if (num < 0) {
+        document.write(num + " là số nhỏ hơn 0")
     }else {
         document.write("Không xác định!")
     }
