--- a/Câu lệnh IF 2/Luyện tập 2/bai11.html
+++ b/Câu lệnh IF 2/Luyện tập 2/bai11.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <script>
-    let a = parseFloat(prompt('Nhập vào thu nhập: '));
-    if (a > 100000000) {
-        document.write('Tiền thuế bằng 10% thu nhập')
-    }else if (a > 20000000) {
-        document.write('Tiền thuế bằng 3% thu nhập')
+    let income = parseFloat(prompt("Nhập vào thu nhập: "));
+    if (income > 100000000) {
+        document.write("Tiền thuế bằng 10% thu nhập")
+    }else if (income > 20000000) {
+        document.write("Tiền thuế bằng 3% thu nhập")
     }else {
-        document.write('Không thuế')
+        document.write("Không thuế")
     }
 </script>
 </body>
