--- a/Câu lệnh IF 2/Luyện tập 2/bai6.html
+++ b/Câu lệnh IF 2/Luyện tập 2/bai6.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 <script>
-    let a = +prompt('Nhập a: ');
-    let b = +prompt('Nhập b: ');
+    let a = +prompt("Nhập a: ");
+    let b = +prompt("Nhập b: ");
     let c = (-b/a);
     if (a === 0) {
         if (b === 0){
-            document.write('Phương trình có vô số nghiệm')
+            document.write("Phương trình có vô số nghiệm")
         }else
-            document.write('Phương trình vô nghiệm')
+            document.write("Phương trình vô nghiệm")
     }else
-        document.write('Phương trình có nghiệm là: ' + c)
+        document.write("Phương trình có nghiệm là: " + c)
 </script>
 </body>
 </html>
