--- a/Câu lệnh IF 2/Luyện tập 2/bai8.html
+++ b/Câu lệnh IF 2/Luyện tập 2/bai8.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let a = +prompt('Nhập vào số tuổi là: ');
-    if (a > 0 && a < 120)
-        alert(a + ' là số tuổi của 1 người')
+    let age = +prompt("Nhập vào số tuổi là: ");
+    if (age > 0 && age < 120)
+        alert(age + " là số tuổi của 1 người")
 </script>
 </body>
 </html>
