--- a/Câu lệnh IF 2/Luyện tập 2/bai9.html
+++ b/Câu lệnh IF 2/Luyện tập 2/bai9.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <script>
-    let a = parseFloat(prompt('Nhập vào a: '));
-    let b = parseFloat(prompt('Nhập vào b: '));
-    let c = parseFloat(prompt('Nhập vào c: '));
+    let a = parseFloat(prompt("Nhập vào a: "));
+    let b = parseFloat(prompt("Nhập vào b: "));
+    let c = parseFloat(prompt("Nhập vào c: "));
     if ( a > 0 && b > 0 && c > 0 && (a+b)>c && (c+b)>a && (a+c)>b)
-        alert('a, b, c là 3 cạnh của 1 tam giác')
+        alert("a, b, c là 3 cạnh của 1 tam giác")
 </script>
 </body>
 </html>
