--- a/Câu lệnh IF/employee.html
+++ b/Câu lệnh IF/employee.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 <script>
-    let login = prompt('Nhập: ','')
-    let massage = (login == 'Employee') ?
+    let login = prompt("Nhập: ");
+    let message = (login == 'Employee') ?
         'Hello' :
         (login == 'Director') ?
             'Greetings' :
             (login == '') ?
                 'No login' :
                 '';
-    alert(massage)
+    alert(message);
 </script>
 </body>
 </html>
