--- a/Câu lệnh IF/sign.html
+++ b/Câu lệnh IF/sign.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let value = parseInt(prompt('Type a number'));
+    let value = parseInt(prompt("Type a number"));
     let j = ((value > 0) ? 1 : (value < 0) ? -1:0);
     switch (j) {
         case 1:
