--- a/Câu lệnh IF/switch1.html
+++ b/Câu lệnh IF/switch1.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 <script>
-    let browser = prompt('Trình duyện là:','');
+    let browser = prompt("Trình duyện là:");
     switch (browser) {
-        case 'Edge':
+        case "Edge":
             alert("You've got the Edge!");
             break;
-        case 'Chrome':
-        case 'Firefox':
-        case 'Safari':
-        case 'Opera':
-            alert('Okay we support these browsers too');
+        case "Chrome":
+        case "Firefox":
+        case "Safari":
+        case "Opera":
+            alert("Okay we support these browsers too");
             break;
         default:
-            alert('We hope that this page looks ok!');
+            alert("We hope that this page looks ok!");
     }
 </script>
 </body>
