--- a/Câu lệnh IF/switch2.html
+++ b/Câu lệnh IF/switch2.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <script>
-    let a = parseInt(prompt('a?'));
-    switch (a) {
+    let value = parseInt(prompt("a=?"));
+    switch (value) {
         case 0:
             alert(0);
             break;
@@ -16,7 +16,7 @@
             break;
         case 2:
         case 3:
-            alert('2,3');
+            alert("2,3");
             break;
     }
 </script>
