--- a/Vòng lặp 1/dowhilesample.html
+++ b/Vòng lặp 1/dowhilesample.html
@@ -8,9 +8,9 @@
 <script>
     let value = null;
     do{
-        value = prompt('Nhập giá trị số từ 1 -> 10: ')
+        value = prompt("Nhập giá trị số từ 1 -> 10: ")
     }while (value < 1||value >10);
-    document.write('Số bạn vừa nhập là: '+ value)
+    document.write("Số bạn vừa nhập là: "+ value)
 </script>
 </body>
 </html>
