--- a/Vòng lặp 1/while.html
+++ b/Vòng lặp 1/while.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <script>
-    let num = parseInt(prompt('Nhập vào 1 số bất kỳ: '));
+    let num = parseInt(prompt("Nhập vào 1 số bất kỳ: "));
     let total = num;
     while (num !== -1){
-        num = parseInt(prompt('Nhập vào 1 số bất kỳ: '));
-        document.write('Số vừa nhập: ' + num + '<br>')
+        num = parseInt(prompt("Nhập vào 1 số bất kỳ: "));
+        document.write("Số vừa nhập: " + num + "<br>")
         total=total+num
     }
-    document.write('Tổng các số là: ' + total);
+    document.write("Tổng các số là: " + total);
 </script>
 </body>
 </html>
