--- a/Vòng lặp 2/Luyện tập 1/bai2.html
+++ b/Vòng lặp 2/Luyện tập 1/bai2.html
@@ -7,13 +7,13 @@
 <body>
 <script>
     do {
-        let nhietdo = prompt('Nhập vào nhiệt độ bất kỳ: ');
+        let nhietdo = prompt("Nhập vào nhiệt độ bất kỳ: ");
         if (nhietdo < 20) {
-            alert('Tăng nhiệt độ')
+            alert("Tăng nhiệt độ")
         } else if (nhietdo > 100) {
-            alert('Giảm nhiệt độ')
+            alert("Giảm nhiệt độ")
         } else {
-            alert('Bình thường')
+            alert("Bình thường")
             break;
         }
     }
