--- a/Vòng lặp 2/Luyện tập 1/bai6.html
+++ b/Vòng lặp 2/Luyện tập 1/bai6.html
@@ -7,16 +7,16 @@
 <body>
 <script>
     let i=0;
-    let num=1;
-    let tong=0;
-    while (num<=30){
+    let count=1;
+    let sum=0;
+    while (count<=30){
         if (i%7==0){
-            num++;
-            tong+=i;
+            count++;
+            sum+=i;
         }
         i++
     }
-    document.write('Tổng các số là : ' + tong);
+    document.write('Tổng các số là : ' + sum);
 </script>
 </body>
 </html>
