--- a/Vòng lặp 2/Luyện tập 2/bai1.html
+++ b/Vòng lặp 2/Luyện tập 2/bai1.html
@@ -8,9 +8,9 @@
 <script>
     let a=0;
     let b=1;
-    let num=+prompt("Nhập vào số lượng số cần hiển thị: ")
+    let count=+prompt("Nhập vào số lượng số cần hiển thị: ")
     document.write("Những số cần tìm là: ")
-    for (i=1;i<=num;i++){
+    for (i=1;i<=count;i++){
         c=a+b
         a=b
         b=c
