--- a/Vòng lặp 2/Luyện tập 2/bai2.html
+++ b/Vòng lặp 2/Luyện tập 2/bai2.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <script>
-    let num = +prompt('Nhập vào 1 số nguyên dương');
+    let num = +prompt("Nhập vào 1 số nguyên dương: ");
     let i = 1;
-    let giaithua =1;
+    let factorial =1;
     for (i;i<=num && num>=0;){
-        giaithua*=i;
+        factorial*=i;
         i++;
     }
-    document.write('Giai thừa của ' + num + ' là ' + giaithua)
+    document.write('Giai thừa của ' + num + ' là ' + factorial)
 </script>
 </body>
 </html>
