--- a/Vòng lặp 2/Luyện tập 2/bai3.html
+++ b/Vòng lặp 2/Luyện tập 2/bai3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    /*let i;
+    let i;
     let j;
     for (i=1;i<=5;i++){
         for (j=1;j<=i;j++){
@@ -15,14 +15,14 @@
         document.write('<br>');
     }
 
-    let i;
-    let j;
-    for (i=5;i>=1;i--){
-        for (j=1;j<=i;j++){
+    let g;
+    let h;
+    for (g=5;g>=1;g--){
+        for (h=1;h<=g;h++){
             document.write('* ');
         }
         document.write('<br>');
-    }*/
+    }
 
 </script>
 </body>
