--- a/Câu lệnh IF 2/Luyện tập 1/bai4.html
+++ b/Câu lệnh IF 2/Luyện tập 1/bai4.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 <script>
-    let a = +prompt('Nhập a:');
-    let b = +prompt('Nhập b:');
-    let c = +prompt('Nhập c:');
+    let a = +prompt("Nhập a:");
+    let b = +prompt("Nhập b:");
+    let c = +prompt("Nhập c:");
     if (a > b) {
         if (a > c) {
-            alert('Số lớn nhất là: ' + a)
+            alert("Số lớn nhất là: " + a)
         }
     }else if (b > c) {
-        alert('Số lớn nhất là: ' + b)
+        alert("Số lớn nhất là: " + b)
     }else{
-        alert('Số lớn nhất là: ' + c)
+        alert("Số lớn nhất là: " + c)
     }
 </script>
 </body>
