--- a/Câu lệnh IF 2/sukienclickchuot.html
+++ b/Câu lệnh IF 2/sukienclickchuot.html
@@ -6,20 +6,20 @@
 </head>
 <body>
 <form>
-    <img id='image' src="tải%20xuống.jpg">
+    <img id="image" src="tải%20xuống.jpg">
     <p>Click button below to move the image to right</p>
     <input type="button" value="ClickMe" onclick="moveRight();" />
 </form>
 <script>
     let imgObj = null;
-    imgObj = document.getElementById('image');
+    imgObj = document.getElementById("image");
     function init() {
-        imgObj = document.getElementById('image');
-        imgObj.style.position = 'relative';
-        imgObj.style.left = '0px';
+        imgObj = document.getElementById("image");
+        imgObj.style.position = "relative";
+        imgObj.style.left = "0px";
     }
     function moveRight() {
-        imgObj.style.left = parseInt(imgObj.style.left) + 10 + 'px';
+        imgObj.style.left = parseInt(imgObj.style.left) + 10 + "px";
     }
     window.onload = init()
 </script>
