--- a/Câu lệnh IF 2/ungdungvui.html
+++ b/Câu lệnh IF 2/ungdungvui.html
@@ -7,18 +7,18 @@
 <body>
 <div id="tong">
     <h1 style="position: absolute;left: 250px;top: 250px">Do you love me?</h1>
-    <input type="button" name="yes" value="Yes" style="position: absolute;left: 300px;top: 320px" onclick="yesclick()"/>
-    <input type="button" name="no" value="No" id="not" style="position: absolute;left: 370px;top: 320px" onmouseover="noclick()"/>
+    <input type="button" name="yes" value="Yes" style="position: absolute;left: 300px;top: 320px" onclick="yesClick()"/>
+    <input type="button" name="no" value="No" id="not" style="position: absolute;left: 370px;top: 320px" onmouseover="noClick()"/>
 </div>
 <script>
-    function yesclick() {
-        alert('I <3 U')
+    function yesClick() {
+        alert("I <3 U")
     }
-    function noclick() {
+    function noClick() {
         let x = window.innerWidth;
         let y = window.innerHeight;
-        document.getElementById('not').style.left = Math.round(x * Math.random()) + 'px';
-        document.getElementById('not').style.top = Math.round(y * Math.random()) + 'px';
+        document.getElementById("not").style.left = Math.round(x * Math.random()) + "px";
+        document.getElementById("not").style.top = Math.round(y * Math.random()) + "px";
     }
 </script>
 </body>
