--- a/Câu lệnh IF/add.html
+++ b/Câu lệnh IF/add.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let a = parseInt(prompt('a: '));
-    let b = parseInt(prompt('b: '));
-    result = (a+b < 4) ? 'Below' : 'Over';
+    let a = parseInt(prompt("a: "));
+    let b = parseInt(prompt("b: "));
+    result = (a+b < 4) ? "Below" : "Over";
     document.write(result);
 </script>
 </body>
