--- a/Câu lệnh IF/ex01.html
+++ b/Câu lệnh IF/ex01.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-    let value = prompt('What is the "official" name of JavaScript?','');
-        if (value == 'ECMAScript') {
-        alert('Right!');
+    let value = prompt('What is the "official" name of JavaScript?');
+        if (value == "ECMAScript") {
+        alert("Right!");
     }else {
         alert("Didn't know? ECMASript!");
     }
