--- a/DEMO/chenvalue-demo.html
+++ b/DEMO/chenvalue-demo.html
@@ -19,9 +19,9 @@
     let num=[1,2,3,4,5,6,7,8,9];
     let index= +prompt("Nhập vào vị trí muốn chèn: ");
     let value= +prompt("Nhập vào giá trị muốn chèn: ");
-    let mangmoi=chenValue(index,value,num);
-    document.write("Mảng mới là: "+mangmoi);
-    document.write("<br>Độ dài mảng mới là: "+mangmoi.length)
+    let newArr=chenValue(index,value,num);
+    document.write("Mảng mới là: "+newArr);
+    document.write("<br>Độ dài mảng mới là: "+newArr.length)
 </script>
 </body>
 </html>
