--- a/Vòng lặp 2/Luyện tập 1/bai1.html
+++ b/Vòng lặp 2/Luyện tập 1/bai1.html
@@ -10,10 +10,10 @@
     let i;
     for (i=1;i<=100;i++) {
         if (i == 99) {
-            alert('Hoàn thành');
+            alert("Hoàn thành");
             break;
         }
-        text += 'The number là: ' + i +'<br>'
+        text += "The number là: " + i +"<br>"
     }
     document.write(text);
 </script>
