--- a/Vòng lặp 2/Luyện tập 1/bai5.html
+++ b/Vòng lặp 2/Luyện tập 1/bai5.html
@@ -8,14 +8,14 @@
 <script>
     let a=0;
     let b=1;
-    let tong=0;
+    let sum=0;
     for (i=1;i<=20;i++){
         c=a+b
         a=b
         b=c
-        tong+=c
+        sum+=c
     }
-    document.write("Tổng của 20 số đầu tiên trong Fibonanci là: " + tong)
+    document.write("Tổng của 20 số đầu tiên trong Fibonanci là: " + sum)
 </script>
 </body>
 </html>
