--- a/Vòng lặp 2/Luyện tập 2/bai5.html
+++ b/Vòng lặp 2/Luyện tập 2/bai5.html
@@ -6,16 +6,15 @@
 </head>
 <body>
 <script>
-    let tienbandau = +prompt("Số tiền ban đầu là: ");
-    let laisuat = +prompt("Lãi suất là: ");
-    let sothang = +prompt("Số tháng gửi là: ");
-    let laithang;
-    let i;
-    for (i=1;i<=sothang;i++){
-        laithang=(tienbandau*laisuat);
-        tienbandau+=laithang;
+    let money = +prompt("Số tiền ban đầu là: ");
+    let interest_rate = +prompt("Lãi suất là: ");
+    let month = +prompt("Số tháng gửi là: ");
+    let interest;
+    for (let i=1;i<=month;i++){
+        interest=(money*interest_rate);
+        money+=interest;
     }
-    document.write("Số tiền nhận được là :" + tienbandau)
+    document.write("Số tiền nhận được là :" + money)
 </script>
 </body>
 </html>
