--- a/Vòng lặp 2/bangcuuchuong.html
+++ b/Vòng lặp 2/bangcuuchuong.html
@@ -11,7 +11,7 @@
     for (i = 1; i <= 9; i++) {
         sout = sout + "<tr>";
         for (j = 2; j <= 9; j++) {
-            sout = sout + "<td border= '2px solid black'>" + j + 'x' + i + '=' + (i*j) + "</td>";
+            sout = sout + "<td border= '2px solid black'>" + j + "x" + i + "=" + (i*j) + "</td>";
         }
         sout = sout + "</tr>";
     }
